# aime-video-context-rag

./: app.py  main.py  pyproject.toml
src/agents/: schema.py  youtube_agent.py
src/agno/: __init__.py  copilot.py  lib.py
src/core/: config.py
src/services/: transcribe.py
src/tools/: youtube_transcript.py
