[project]
name = "aime-video-context-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agno>=2.5.10",
    "openai>=2.29.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "streamlit>=1.45.0",
    "youtube-transcript-api>=1.2.4",
]
